rust/codec-html/src/snapshots/encode_html_fragments@thematic-break.html.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 455
expression: encoded
input_file: fixtures/fragments/html/thematic-break.html

---
<article data-root itemtype="https://schema.org/Article" itemscope>
  <stencila-document-toolbar>
  </stencila-document-toolbar>
  <div data-prop="content">
    <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
      <span>First theme.</span>
    </p>
    <hr itemtype="https://schema.stenci.la/ThematicBreak" itemscope/>
    <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
      <span>Second theme.</span>
    </p>
    <hr itemtype="https://schema.stenci.la/ThematicBreak" itemscope/>
    <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
      <span>Third theme.</span>
    </p>
  </div>
</article>
