rust/codec-html/src/snapshots/encode_html_fragments@underline.html.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 530
expression: encoded
input_file: fixtures/fragments/html/underline.html
---
<article data-root itemtype="https://schema.org/Article" itemscope>
  <div data-prop="content">
    <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
      <span>Underlined text like</span>
      <u itemtype="https://schema.stenci.la/Underline" itemscope>
        <span>this</span>
      </u>
    </p>
  </div>
</article>
