rust/codec-html/src/snapshots/encode_nodes@array.json.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 534
expression: html
input_file: fixtures/nodes/array.json
---
<stencila-array>
  <ol data-root slot="items">
    <li>
      <span>null</span>
    </li>
    <li>
      <span>true</span>
    </li>
    <li>
      <span>false</span>
    </li>
    <li>
      <span>1</span>
    </li>
    <li>
      <span>1.23</span>
    </li>
    <li>
      <span>1000000.0</span>
    </li>
    <li>a</li>
    <li>
      <stencila-array>
        <ol slot="items">
          <li>
            <span>1</span>
          </li>
          <li>
            <stencila-array>
              <ol slot="items">
              </ol>
            </stencila-array>
          </li>
        </ol>
      </stencila-array>
    </li>
    <li>
      <stencila-object>
        <dl slot="pairs">
          <dt>a</dt>
          <dd>
            <span>1</span>
          </dd>
          <dt>b</dt>
          <dd>b</dd>
        </dl>
      </stencila-object>
    </li>
  </ol>
</stencila-array>
