rust/codec-html/src/snapshots/encode_nodes@article-code.json.snap
---
source: rust/codec-html/src/encode.rs
expression: html
input_file: fixtures/nodes/article-code.json

---
<article data-itemscope="root" itemtype="http://schema.org/Article" itemscope>
  <div data-itemprop="content">
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Why? Because to test incremental  patches it is currently necessary to have nodes nested within another node (patches at the top level are just `Replace` operations).</p>
    <stencila-code-chunk itemtype="http://schema.stenci.la/CodeChunk" itemscope  programming-language="python">
      <meta itemprop="programmingLanguage" content="python"/>
      <pre data-itemprop="text" slot="text"># Some code</pre>
      <div data-itemprop="outputs" slot="outputs">
        <span itemtype="http://schema.org/Text" itemscope>a string</span>
        <span itemtype="http://schema.stenci.la/Boolean" itemscope>true</span>
        <span itemtype="http://schema.stenci.la/Integer" itemscope>42</span>
        <span itemtype="http://schema.stenci.la/Number" itemscope>1.23</span>
        <code itemtype="http://schema.stenci.la/Array" itemscope>[
  1,
  2,
  3
]</code>
        <table itemtype="http://schema.stenci.la/TableSimple" itemscope>
          <caption>
          </caption>
          <tbody data-itemprop="rows">
            <tr itemtype="http://schema.stenci.la/TableRow" itemscope>
              <td itemtype="http://schema.stenci.la/TableCell" itemscope>
                <span itemtype="http://schema.stenci.la/Integer" itemscope>1</span>
              </td>
              <td itemtype="http://schema.stenci.la/TableCell" itemscope>
                <span itemtype="http://schema.stenci.la/Integer" itemscope>2</span>
              </td>
              <td itemtype="http://schema.stenci.la/TableCell" itemscope>
                <span itemtype="http://schema.stenci.la/Integer" itemscope>3</span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div data-itemprop="errors" slot="errors">
        <div itemtype="http://schema.stenci.la/CodeError" itemscope>
          <span data-itemprop="errorMessage">Some error message</span>
          <span data-itemprop="errorType">SomeErrorType</span>
          <pre data-itemprop="stackTrace">Several lines
whose exact format
will depend upon the language</pre>
        </div>
        <div itemtype="http://schema.stenci.la/CodeError" itemscope>
          <span data-itemprop="errorMessage">Another error message</span>
          <span data-itemprop="errorType">AnotherErrorType</span>
        </div>
      </div>
    </stencila-code-chunk>
  </div>
</article>
