rust/codec-html/src/snapshots/encode_nodes@code-block.json.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 525
expression: html
input_file: fixtures/nodes/code-block.json
---
<stencila-code-block data-root itemtype="https://schema.stenci.la/CodeBlock" itemscope programming-language="python">
  <meta itemprop="programmingLanguage" content="python"/>
  <pre slot="code">
    <code itemprop="code" class="language-python">
    </code>
  </pre>
</stencila-code-block>
