rust/codec-html/src/snapshots/encode_nodes@code-chunk.json.snap
---
source: rust/codec-html/src/encode.rs
expression: html
input_file: fixtures/nodes/code-chunk.json

---
<stencila-code-chunk data-itemscope="root" itemtype="http://schema.stenci.la/CodeChunk" itemscope programming-language="python">
  <meta itemprop="programmingLanguage" content="python"/>
  <pre data-itemprop="text" slot="text"># Some code</pre>
  <div data-itemprop="outputs" slot="outputs">
    <span itemtype="http://schema.org/Text" itemscope>a string output</span>
    <span itemtype="http://schema.stenci.la/Boolean" itemscope>true</span>
    <span itemtype="http://schema.stenci.la/Integer" itemscope>42</span>
    <span itemtype="http://schema.stenci.la/Number" itemscope>1.23</span>
    <img itemtype="http://schema.org/ImageObject" itemscope  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFUlEQVR42mNkYvhfz0AEYBxVSF+FAA/eDwup9bzCAAAAAElFTkSuQmCC"/>
  </div>
  <div data-itemprop="errors" slot="errors">
    <div itemtype="http://schema.stenci.la/CodeError" itemscope>
      <span data-itemprop="errorMessage">Some error message</span>
      <span data-itemprop="errorType">SomeErrorType</span>
      <pre data-itemprop="stackTrace">Several lines
whose exact format
will depend upon the language</pre>
    </div>
    <div itemtype="http://schema.stenci.la/CodeError" itemscope>
      <span data-itemprop="errorMessage">Another error message</span>
      <span data-itemprop="errorType">AnotherErrorType</span>
    </div>
  </div>
  <span data-itemprop="label" itemtype="http://schema.org/Text" itemscope>A label</span>
  <figcaption data-itemprop="caption">
    <h3 itemtype="http://schema.stenci.la/Heading" itemscope>A caption title</h3>
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>A caption paragraph</p>
  </figcaption>
</stencila-code-chunk>
