rust/codec-html/src/snapshots/encode_nodes@code-expression-string.json.snap
---
source: rust/codec-html/src/encode.rs
expression: html
input_file: fixtures/nodes/code-expression-string.json

---
<stencila-code-expression data-itemscope="root" itemtype="http://schema.stenci.la/CodeExpression" itemscope programming-language="r">
  <meta itemprop="programmingLanguage" content="r"/>
  <code data-itemprop="text" slot="text">print(&#x27;foo&#x27;)</code>
  <output data-itemprop="output" slot="output">
    <pre itemtype="http://schema.org/Text" itemscope>foo</pre>
  </output>
  <span data-itemprop="errors" slot="errors">
  </span>
</stencila-code-expression>
