rust/codec-html/src/snapshots/encode_nodes@creative-work.json.snap
---
source: rust/codec-html/src/encode.rs
assertion_line: 525
expression: html
input_file: fixtures/nodes/creative-work.json
---
<article data-root itemtype="https://schema.org/CreativeWork" itemscope>
  <p itemtype="https://schema.stenci.la/Paragraph" itemscope>
    <span>A fixture that is a creative work containing code nodes.</span>
    <span>Why? Because in some circumstances, instead of nested, structured content (e.g. an `Article`),</span>
    <span>we want to use a flat array of nodes.</span>
  </p>
  <stencila-code-chunk id="cc-1" programming-language="">
    <pre data-prop="code" slot="code">
    </pre>
    <div data-prop="outputs" slot="outputs">
      <img itemtype="https://schema.org/ImageObject" itemscope  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFUlEQVR42mNkYvhfz0AEYBxVSF+FAA/eDwup9bzCAAAAAElFTkw"/>
    </div>
    <div data-prop="errors" slot="errors">
    </div>
  </stencila-code-chunk>
</article>
