rust/codec-html/src/snapshots/encode_nodes@figure.json.snap
---
source: rust/codec-html/src/encode.rs
expression: html
input_file: fixtures/nodes/figure.json

---
<figure data-itemscope="root" itemtype="http://schema.stenci.la/Figure" itemscope>
  <div data-itemprop="content">
    <img itemtype="http://schema.org/ImageObject" itemscope  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFUlEQVR42mNkYvhfz0AEYBxVSF+FAA/eDwup9bzCAAAAAElFTkw"/>
  </div>
  <span data-itemprop="label">Figure 1</span>
  <figcaption data-itemprop="caption">
    <h3 itemtype="http://schema.stenci.la/Heading" itemscope>
      <span>The caption title</span>
    </h3>
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>
      <span>The caption paragraph</span>
    </p>
  </figcaption>
</figure>
